# red_scoring

./: .flake8  .gitignore  INFORME_TECNICO.md  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh  setup_vscode.py
.github/workflows/: ci.yml
data/: README.md
data/sample/: bcra_merged_sample.csv  padron_afip_sample.csv
docs/: informe_tecnico.md  md_to_pdf.py
output/tables/: comunidades_stats.csv  cruce_comunidad_comportamiento.csv  features.csv  scoring_resultados.csv  validacion_entidades_top.csv  validacion_mora_por_entidad.csv
scripts/: analisis_comunidades.py  bcra_fetch.py  build_features.py  build_red_distancia.py  build_red_monto.py  build_red_morosos.py  merge_bcra.py  modelo_scoring.py  test_red_morosos.py  validacion_cruce.py  validacion_entidades.py
src/red_scoring/: __init__.py  behavior.py  communities.py  config.py  features.py  graph.py  io.py  model.py  validation.py
tests/: conftest.py  test_smoke.py
